--- a/app/src/main/res/layout/activity_register_attendee.xml
+++ b/app/src/main/res/layout/activity_register_attendee.xml
@@ -20,7 +20,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/personal_details"
+            android:text="Add Bus Attendee"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
