--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -50,6 +50,12 @@
             android:text="Student Name"
             tools:ignore="HardcodedText" />
 
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/request_payment"
+            android:layout_marginTop="4dp"
+            android:text="@string/request_payment"/>
     </LinearLayout>
 
 </LinearLayout>
