--- a/app/src/main/res/layout/requests_item.xml
+++ b/app/src/main/res/layout/requests_item.xml
@@ -51,13 +51,29 @@
             tools:ignore="HardcodedText" />
 
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/approve"
-            android:layout_marginTop="5dp"
-            android:id="@+id/approve"
-            android:layout_gravity="end"/>
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/approve"
+                android:layout_marginTop="5dp"
+                android:id="@+id/approve"
+                android:layout_marginEnd="50dp"
+                android:gravity="start"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                android:layout_marginTop="5dp"
+                android:id="@+id/delete"
+                android:gravity="end"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
     </LinearLayout>
 
 </LinearLayout>
