--- a/app/src/main/res/layout/bus_item.xml
+++ b/app/src/main/res/layout/bus_item.xml
@@ -24,12 +24,31 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/vehicle_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Vehicle Name"
-             />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/vehicle_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vehicle Name"
+                android:layout_weight="1"
+                />
+
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_delete_outline_24"
+                android:contentDescription="@string/delete"
+                android:background="@android:color/transparent"
+                />
+
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/vehicle_model"
