--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -15,15 +15,33 @@
         android:layout_margin="8dp"
         android:padding="10dp"
         android:orientation="vertical">
-
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
             android:id="@+id/parent_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Parent Name"
             android:textSize="18sp"
             android:textStyle="bold"
+                android:layout_weight="1"
             tools:ignore="HardcodedText" />
+
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_delete_outline_24"
+                android:contentDescription="@string/delete"
+                android:background="@android:color/transparent"
+                />
+
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/parent_email"
