--- a/app/src/main/res/layout/requests_item.xml
+++ b/app/src/main/res/layout/requests_item.xml
@@ -15,15 +15,33 @@
         android:layout_margin="8dp"
         android:padding="10dp"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/parent_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Parent Name"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/parent_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Parent Name"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                tools:ignore="HardcodedText" />
+
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_delete_outline_24"
+                android:contentDescription="@string/delete"
+                android:background="@android:color/transparent"
+                />
+
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/parent_email"
@@ -51,28 +69,14 @@
             tools:ignore="HardcodedText" />
 
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal">
             <com.google.android.material.button.MaterialButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/approve"
                 android:layout_marginTop="5dp"
                 android:id="@+id/approve"
-                android:layout_marginEnd="50dp"
-                android:gravity="start"/>
+                android:layout_gravity="end"/>
 
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/delete"
-                android:layout_marginTop="5dp"
-                android:id="@+id/delete"
-                android:gravity="end"/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </LinearLayout>
 
