--- a/app/src/main/res/layout/student_row_item.xml
+++ b/app/src/main/res/layout/student_row_item.xml
@@ -23,14 +23,34 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/student_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Student Name"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/student_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Student Name"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                tools:ignore="HardcodedText" />
+
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:src="@drawable/ic_baseline_delete_outline_24"
+                android:contentDescription="@string/delete"
+                android:background="@android:color/transparent"
+                />
+
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/student_division"
