--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -315,7 +315,8 @@
                 android:id="@+id/school_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
+                android:maxLength="5"
                 android:textColor="@color/black"/>
 
         </com.google.android.material.textfield.TextInputLayout>
