--- a/app/src/main/res/layout/parent_item.xml
+++ b/app/src/main/res/layout/parent_item.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="2dp"
     android:background="@drawable/student_list_background"
-    android:layout_margin="3dp">
+    android:layout_margin="3dp"
+    android:id="@+id/container"
+    >
 
 
 
